--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
 	<properties>
 		<!-- Tomcatin versionumero -->
 		<tomcat.version>9.0.31</tomcat.version>
+		
+		<sqlite.driver.version>3.30.1</sqlite.driver.version>
+		<junit.jupiter.version>5.6.0</junit.jupiter.version>
+		<jstl.api.version>1.2</jstl.api.version>
 
 		<!-- Javan versionumero -->
 		<maven.compiler.target>1.9</maven.compiler.target>
@@ -57,5 +61,21 @@
 			<artifactId>tomcat-jasper-el</artifactId>
 			<version>${tomcat.version}</version>
 		</dependency>
+		<dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>${sqlite.driver.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>${junit.jupiter.version}</version>
+        <scope>test</scope>
+    </dependency>
+   <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+        <version>${jstl.api.version}</version>
+    </dependency>
 	</dependencies>
 </project>
