--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 			<version>${tomcat.version}</version>
 		</dependency>
 		<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.6</version>
+    <scope>compile</scope>
+</dependency>
+		<dependency>
         <groupId>org.xerial</groupId>
         <artifactId>sqlite-jdbc</artifactId>
         <version>${sqlite.driver.version}</version>
